--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,13 @@
-button {
-    margin: 7px;
+
+#option-cards{
+    position: relative;
+    box-sizing: border-box;
+    float: left;
+}
+
+.optionButtons{
+    position: relative;
+    float: left;
+    margin-left: 15%;
+    margin-top: 10px;
 }
