--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,13 @@
 button {
     margin: 7px;
 }
+
+.modal-title {
+    color: rgb(228, 59, 59);
+    font-size: 20px;
+}
+
+.form-group {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
