--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,26 @@
 button {
     margin: 7px;
 }
+
+#option-cards{
+    position: relative;
+    box-sizing: border-box;
+    float: left;
+}
+
+.optionButtons{
+    position: relative;
+    float: left;
+    margin-left: 15%;
+    margin-top: 10px;
+}
+
+.modal-title {
+    color: rgb(228, 59, 59);
+    font-size: 20px;
+}
+
+.form-group {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
