--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,10 +9,8 @@ button {
 }
 
 .optionButtons{
-    position: relative;
-    float: left;
-    margin-left: 15%;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .modal-title {
@@ -23,4 +21,24 @@ button {
 .form-group {
     font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h3{
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1000px){
+    h3{
+        font-size: 15px;
+    }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 767px){
+   #option-cards{
+        margin-left: 70px;
+   }
+
+   .headeroptions{
+       margin-right: 50px;
+   }
 }
