--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,8 @@ button {
 #reroll{
     width: 16%;
     margin-left: 42%;
-    margin-right: 42%
+    margin-right: 42%;
+    margin-top: 30px;
 }
 
 .modal-title {
@@ -57,8 +58,24 @@ button {
     inset 0 0 12px #ff1919;
   }
 
-h3{
+  .header{
+      margin-left: 25px;
+  }
+  
+  h1{
+    font-family: 'Lato', sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
+    line-height: 44px;
+}
+
+p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+  h3{
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1000px){
@@ -75,5 +92,13 @@ h3{
    .headeroptions{
        margin-right: 50px;
    }
+
+   #reroll{
+    width: 30%;
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 }
 
