--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,11 +3,46 @@ button {
 }
 
 .modal-title {
-    color: rgb(228, 59, 59);
-    font-size: 20px;
+        font-size: 20px;
 }
 
 .form-group {
     font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+
+/* userSelection */
+#restPlaceholder {
+    width: 100px;
+    height: 100px;
+    margin-left: 75px;
+
+}
+
+#restaurantDetail {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+}
+
+#restaurantName {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    margin-top: -5px;
+    text-align: center;
+}
+
+#modalTitle {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    margin-bottom: -45px;
+    text-align: center;
+    margin-top: -10px;
+    padding-bottom: 15px;
+}
+
+.bg-danger{
+    background-color: rgb(211, 73, 73);
+}
+
