--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,44 +26,47 @@ button {
 }
 
 /* userSelection */
-#restPlaceholder {
-    width: 100px;
-    height: 100px;
-    margin-left: 75px;
-
-}
-
-#restaurantDetail {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-}
-
-#restaurantName {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    margin-top: -5px;
-    text-align: center;
+.bg-danger{
+    background-color: rgb(211, 73, 73);
+    color: white;
 }
 
 #modalTitle {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     margin-bottom: -45px;
-    text-align: center;
     margin-top: -10px;
     padding-bottom: 15px;
 }
 
-.bg-danger{
-    background-color: rgb(211, 73, 73);
+#restaurantName {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    margin-top: -8px;
+    margin-bottom: -8px;
 }
 
+#restPlaceholder {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+#restaurantDetail {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    padding: 0;
+    margin: 0;
+}
+
+
+/*////////*/
 
 #option-cards{
     position: relative;
     box-sizing: border-box;
     float: left;
-
+}
 .borderchosen {
     border: 3px solid #0cd808;
     border-radius: 5px;
@@ -159,4 +162,20 @@ h3 {
 
 .handpointer { 
     cursor: pointer; 
+}
+
+/* Search Modal */
+.modal-header .close {
+    color: #fff; 
+    opacity: 1
+}
+
+#zipCodeText {
+    margin-left: 5px;
+}
+
+
+#searchModalTitle {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
 }
