Added input validation and instructions on what is missing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,7 @@ button {
     position: relative;
     box-sizing: border-box;
     float: left;
+}
 
 .borderchosen {
     border: 3px solid #0cd808;
