--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,6 +138,7 @@ h3 {
     color: rgb(228, 59, 59)
 }
 
+/* Begin Media Queries */
 @media only screen and (min-width: 768px) and (max-width: 1000px){
     h3 {
         font-size: 15px;
@@ -147,19 +148,18 @@ h3 {
 @media only screen and (min-width: 300px) and (max-width: 767px){
     .restaurantName {
         max-width: 100px;
-        text-align: center;
+        margin-left: 25px;
     }
     .options {
         width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
+        margin-left: 55px;
     }
     #options {
         text-align: center;
         margin-left: 20px;
     }
     .headeroptions {
-        margin-right: 50px;
+        margin-top: 10px;
     }
     #reroll {
         width: 30%;
@@ -168,7 +168,15 @@ h3 {
         margin-top: 30px;
         margin-bottom: 30px;
     }
+
+    .dice{ 
+        width: 42px;
+        height: 42px;
+    }  
+
 }
+
+/* End Media Queries */
 
 .handpointer { 
     cursor: pointer; 
