--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,18 @@
+.img-responsive {
+    height: 100px;
+    margin: 0 auto;
+}
+
+.locationCard {
+    border: 1px solid darkgray;
+    min-width: 225px;
+    height: 400px;
+}
+
+.cardclass {
+    min-height: 205px;
+}
+
 button {
     margin: 7px;
 }
@@ -51,7 +66,6 @@ button {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     margin-top: -8px;
-    margin-bottom: -8px;
 }
 
 #restPlaceholder {
@@ -74,6 +88,7 @@ button {
     position: relative;
     box-sizing: border-box;
     float: left;
+    width: 100%;
 }
 
 .borderchosen {
@@ -120,11 +135,11 @@ p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
   
-h3 {
+h3.restaurantName {
     box-sizing: border-box;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    min-height: 50px;
+    min-height: 85px;
 }
   
 .options div h4 {
@@ -146,10 +161,6 @@ h3 {
 }
   
 @media only screen and (min-width: 300px) and (max-width: 767px){
-    .restaurantName {
-        max-width: 100px;
-        margin-left: 25px;
-    }
     .options {
         width: 80%;
         margin-left: 55px;
