Centered start gif top right corner

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -247,7 +247,7 @@ h3.restaurantName {
     animation-fill-mode: forwards;
     max-width: 50px;
     height: 50px;
-    margin: auto;
+    margin: 0 62px;
   }
 
 .arrowimage {
