--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,109 +1,64 @@
-#cuisines {
-    min-height: 58px;
-}
+/*////////////////*/
+/*///// TAGS /////*/
+/*////////////////*/
 
-.img-responsive {
-    height: 100px;
-    margin: 0 auto;
-}
-
-.locationCard {
-    border: 1px solid darkgray;
-    height: 400px;
-    padding: 11px;
-    border-radius: 5px;
-}
-
-.outer-div {
-    position: relative;
-    min-width: 230px;
-    max-height: 400px;
-}
-
-.cardclass {
-    min-height: 205px;
-}
 
 button {
     margin: 7px;
 }
+  
+h1 {
+    font-family: 'Lato', sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
+    line-height: 44px;
+    color: rgb(228, 59, 59);
+}
 
-#option-cards {
-    position: relative;
+h3.restaurantName {
     box-sizing: border-box;
-    float: left;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 85px;
 }
 
-.optionButtons {
-    display: flex;
-    justify-content: space-around;
-    transform: translate(1px, -52px);
-    padding-bottom: 10px;
-    background: #E43B3B;
-    border-radius: 5px;
-    width: 198px;
+input[name="radioBtn"]:first-of-type {
+    margin-top: 12px;
 }
 
-#reroll {
-    width: 170px;
-    text-transform: capitalize;
-    margin-top: 30px;
-}
-
-#reroll-message {
-    color: red;
-    font-weight: 700;
-}
-
-.modal-title {
-        font-size: 20px;
-}
-.form-group {
-    font-size: 15px;
+p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+div h4 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+
+/*///////////////////*/
+/*///// CLASSES /////*/
+/*///////////////////*/
+
 /* userSelection */
+.modal-header .close { /* <------Search Modal */
+    color: #fff; 
+    opacity: 1
+}
+
+.arrowimage {
+    background-image: url("../images/arrow.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 50px;
+    height: 50px;
+}
+
 .bg-danger{
     background-color: rgb(211, 73, 73);
     color: white;
-}
-
-#modalTitle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin-bottom: -45px;
-    margin-top: -10px;
-    padding-bottom: 15px;
-}
-
-#restaurantName {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    margin-top: -8px;
-}
-
-#restPlaceholder {
-    width: 100px;
-    height: 100px;
-    margin-bottom: 10px;
-}
-
-#restaurantDetail {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    padding: 0;
-    margin: 0;
-}
-
-
-/*////////*/
-
-#option-cards {
-    position: relative;
-    box-sizing: border-box;
-    float: left;
-    width: 100%;
 }
 
 .borderchosen {
@@ -133,43 +88,162 @@ button {
     inset 0 0 6px #ff1919, 
     inset 0 0 12px #ff1919;
 }
+
+.cardclass {
+    min-height: 205px;
+}
+
+.float-bubble {
+    /* -webkit-animation: floatBubble infinite 4s ease-in-out; */
+    animation: floatBubble infinite 4s ease-in-out;
+    animation-fill-mode: forwards;
+    max-width: 50px;
+    height: 50px;
+    margin: 0 62px;
+}
+
+.form-group {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.glyphicon-heart {
+    color: rgb(228, 59, 59);
+}
+
+.glyphicon-map-marker {
+    margin-left: 5px;
+    color: rgb(228, 59, 59);
+    font-size: 25px;
+}
+
+.handpointer { 
+    cursor: pointer; 
+}
+
 .header {
     margin-left: 10px;
     min-height: 100px;
 }
-  
-h1 {
-    font-family: 'Lato', sans-serif;
-    font-size: 48px;
-    font-weight: bolder;
-    line-height: 44px;
-    color: rgb(228, 59, 59);
+
+.img-responsive {
+    height: 100px;
+    margin: 0 auto;
 }
-  
-p {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+.locationCard {
+    border: 1px solid darkgray;
+    height: 400px;
+    padding: 11px;
+    border-radius: 5px;
 }
-  
-h3.restaurantName {
-    box-sizing: border-box;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    min-height: 85px;
+
+.modal-title {
+    font-size: 20px;
 }
-  
-.options div h4 {
+
+.optionButtons {
+    display: flex;
+    justify-content: space-around;
+    transform: translate(1px, -52px);
+    padding-bottom: 10px;
+    background: #E43B3B;
+    border-radius: 5px;
+    width: 198px;
+}
+
+.options {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     margin-top: 20px;
 }
-  
-.glyphicon-heart {
+
+.outer-div {
+    position: relative;
+    min-width: 230px;
+    max-height: 400px;
+}
+
+.radio{
+    line-height: 30px;
+}
+
+.start {
     color: rgb(228, 59, 59);
+    font-weight: bolder;
 }
 
 
-/* Begin Media Queries */
+/*///////////////*/
+/*///// IDS /////*/
+/*///////////////*/
+#modalTitle {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    margin-bottom: -45px;
+    margin-top: -10px;
+    padding-bottom: 15px;
+}
+
+#cuisines {
+    min-height: 58px;
+}
+
+#option-cards {
+    position: relative;
+    box-sizing: border-box;
+    float: left;
+    width: 100%;
+}
+
+#radiusBtn{
+    margin-top: 10px;
+}
+
+#reroll {
+    width: 170px;
+    text-transform: capitalize;
+    margin-top: 30px;
+}
+
+#reroll-message {
+    color: red;
+    font-weight: 700;
+}
+
+#restaurantDetail {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    padding: 0;
+    margin: 0;
+}
+
+#restaurantName {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    margin-top: -8px;
+}
+
+#restPlaceholder {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+#searchModalTitle {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+}
+
+#zipCodeText {
+    margin-left: 5px;
+}
+
+/*///////////////////////////////*/
+/*///// Begin Media Queries /////*/
+/*///////////////////////////////*/
+
 @media only screen and (min-width: 768px) and (max-width: 1000px){
     h3 {
         font-size: 15px;
@@ -211,71 +285,14 @@ h3.restaurantName {
         width: 42px;
         height: 42px;
     }  
-
 }
+/*/////////////////////////////*/
+/*///// End Media Queries /////*/
+/*/////////////////////////////*/
 
-/* End Media Queries */
-
-.handpointer { 
-    cursor: pointer; 
-}
-
-/* Search Modal */
-.modal-header .close {
-    color: #fff; 
-    opacity: 1
-}
-
-#zipCodeText {
-    margin-left: 5px;
-}
-
-
-#searchModalTitle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-}
-
-.start {
-    color: rgb(228, 59, 59);
-    font-weight: bolder;
-}
-
-.float-bubble {
-    /* -webkit-animation: floatBubble infinite 4s ease-in-out; */
-    animation: floatBubble infinite 4s ease-in-out;
-    animation-fill-mode: forwards;
-    max-width: 50px;
-    height: 50px;
-    margin: 0 62px;
-  }
-
-.arrowimage {
-    background-image: url("../images/arrow.gif");
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 50px;
-    height: 50px;
-}
-
-.glyphicon-map-marker {
-    margin-left: 5px;
-    color: rgb(228, 59, 59);
-    font-size: 25px;
-}
-
-input[name="radioBtn"]:first-of-type {
-    margin-top: 12px;
-}
-
-.radio{
-    line-height: 30px;
-}
-
-#radiusBtn{
-    margin-top: 10px;
-}
-
+/*////////////////////////////*/
+/*///// Begin key frames /////*/ 
+/*////////////////////////////*/
 
   @-moz-keyframes floatBubble {
     0% {
@@ -310,3 +327,7 @@ input[name="radioBtn"]:first-of-type {
       transform: translateY(-10px);
     }
   }
+
+/*//////////////////////////*/
+/*///// End key frames /////*/ 
+/*//////////////////////////*/
