--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,10 @@ p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-div h4 {
+.locationCard h4 {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    margin-top: 20px;
 }
 
 
