--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,10 +36,21 @@ p {
     font-size: 16px;
 }
 
+.infoModal h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+
 
 /*///////////////////*/
 /*///// CLASSES /////*/
 /*///////////////////*/
+
+.float-bubble {
+    position: absolute;
+    left: 78px;
+    top: 44px;
+}
 
 /* userSelection */
 .modal-header .close { /* <------Search Modal */
@@ -172,7 +183,7 @@ p {
 .outer-div {
     position: relative;
     min-width: 230px;
-    max-height: 400px;
+    /* max-height: 400px; Removing for now, don't think it's needed -RD 5/5/18 */
 }
 
 .radio{
@@ -271,6 +282,13 @@ p {
         margin-left: 100px;
         max-width: 60px;
     }
+
+    .float-bubble {
+        position: absolute;
+        left: 62px;
+        top: 121px;
+    }
+
 }
 
 @media all and (max-width: 767px){
@@ -305,7 +323,15 @@ p {
     .dice{ 
         width: 42px;
         height: 42px;
-    }  
+    }
+}
+
+@media all and (max-width: 767px){
+    .float-bubble {
+        position: absolute;
+        left: -40px;
+        top: 121px;
+    }
 }
 /*/////////////////////////////*/
 /*///// End Media Queries /////*/
