--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,17 +2,21 @@
 /*///// TAGS /////*/
 /*////////////////*/
 
+body {
+    background-color: black;
+}
 
 button {
     margin: 7px;
 }
-  
+
 h1 {
     font-family: 'Lato', sans-serif;
     font-size: 48px;
     font-weight: bolder;
     line-height: 44px;
     color: rgb(228, 59, 59);
+    text-shadow: 2px 2px 4px #000000;
 }
 
 h3.restaurantName {
@@ -47,14 +51,32 @@ p {
     opacity: 1
 }
 
+.rulesHeight {
+    background-color: white;
+    height: 50px;
+}
+
+#rules {
+    font-size: 18px;
+    color: rgb(228, 59, 59);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
 .backgroundimg {
     background-image: url("../images/background2.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    margin-top: 25px;
+}
+
+.dice {
+    height: 130px;
 }
 
 .headercolor {
-    background-color: rgb(255, 255, 255, .8);
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .arrowimage {
@@ -119,6 +141,7 @@ p {
     padding: 11px;
     border-radius: 5px;
     background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .borderchosen {
